--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test-utils": "npm run test tests/utils",
     "test-newGame": "npm run test tests/utils/generateGame.test.js",
     "test-pages": "npm run test tests/pages/",
-    "test-components": "npm run test tests/components/"
+    "test-components": "npm run test tests/components/",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@testing-library/user-event": "^14.4.3",
@@ -31,8 +35,14 @@
     "autoprefixer": "10.4.12",
     "babel-jest": "^29.3.1",
     "cross-env": "^7.0.3",
+    "eslint": "8.36.0",
+    "eslint-plugin-react": "7.32.2",
+    "husky": "8.0.3",
     "jest": "29.2.2",
+    "lint-staged": "13.2.0",
     "postcss": "8.4.18",
+    "prettier": "2.8.4",
+    "standard": "17.0.0",
     "tailwindcss": "3.2.1",
     "vite": "3.2.0"
   },
