--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules& jest --verbose",
-    "test-utils": "npm run test tests/utils",
-    "test-newGame": "npm run test tests/utils/generateGame.test.js",
-    "test-pages": "npm run test tests/pages/",
-    "test-components": "npm run test tests/components/",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "npm run test -- --coverage",
+    "test:ui": "npm run test -- --ui",
     "format": "prettier --write .",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
     "lint:fix": "npm run lint -- --fix",
@@ -19,40 +18,29 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.4.3",
-    "jest-environment-jsdom": "^29.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "wouter": "2.8.0-alpha.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
     "@vitejs/plugin-react": "2.2.0",
+    "@vitest/coverage-c8": "0.29.2",
+    "@vitest/ui": "0.29.2",
     "autoprefixer": "10.4.12",
-    "babel-jest": "^29.3.1",
-    "cross-env": "^7.0.3",
     "eslint": "8.36.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-react": "7.32.2",
     "husky": "8.0.3",
-    "jest": "29.2.2",
+    "jsdom": "21.1.1",
     "lint-staged": "13.2.0",
     "postcss": "8.4.18",
     "prettier": "2.8.4",
-    "standard": "17.0.0",
     "tailwindcss": "3.2.1",
-    "vite": "3.2.0"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/"
-    ],
-    "testEnvironment": "jsdom"
+    "vite": "3.2.0",
+    "vitest": "0.29.2"
   }
 }
