--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,17 @@
 {
- "name": "App",
- "icons": [
-  {
-   "src": "\/logo-48x48.png",
-   "sizes": "48x48",
-   "type": "image\/png",
-   "density": "1.0"
-  },
-  {
-   "src": "\/logo-144x144.png",
-   "sizes": "144x144",
-   "type": "image\/png",
-   "density": "3.0"
-  },
- ]
+  "name": "App",
+  "icons": [
+    {
+      "src": "/logo-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
+    },
+    {
+      "src": "/logo-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    }
+  ]
 }
